--- a/src/LoginForm.css
+++ b/src/LoginForm.css
@@ -64,3 +64,29 @@ div>div {
     font-size: 12px;
     margin-bottom: 10px;
 }
+
+.passwordButton {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    font-size: 18px;
+    line-height: 1;
+    width: auto;
+    height: auto;
+}
+
+.passwordWrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.passwordWrapper input {
+    width: calc(100% - 40px);
+    padding-right: 40px;
+}
